Закончила стилизацию каталога

--- a/catalog.html
+++ b/catalog.html
@@ -96,155 +96,182 @@
             <h2 class="visually-hidden">Список товаров</h2>
             <ul class="catalog-list">
                <li class="catalog-item">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 3000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="old-price">22500 Р.</span>
-                     <span class="new-price">15500 Р.</span>
-                  </p>
+                        <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 3000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="old-price">22500 Р.</span>
+                        <span class="new-price">15500 Р.</span>
+                     </div>
+                  </div>
                </li>
                <li class="catalog-item">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 6000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="old-price">30500 Р.</span>
-                     <span class="new-price">25500 Р.</span>
-                  </p>
+                        <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 6000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="old-price">30500 Р.</span>
+                        <span class="new-price">25500 Р.</span>
+                     </div>
+                  </div>
                </li>
                <li class="catalog-item catalog-item-new catalog-item-active">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 2000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="new-price">12500 Р.</span>
-                  </p>
-               </li>
+                        <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 2000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="new-price">12500 Р.</span>
+                     </div>
+                  </div>
+               </li> 
                <li class="catalog-item">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 3000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="old-price">22500 Р.</span>
-                     <span class="new-price">15500 Р.</span>
-                  </p>
+                        <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 3000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="old-price">22500 Р.</span>
+                        <span class="new-price">15500 Р.</span>
+                     </div>
+                  </div>
                </li>
                <li class="catalog-item catalog-item-new">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 6000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="old-price">30500 Р.</span>
-                     <span class="new-price">25500 Р.</span>
-                  </p>
+                        <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 6000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="old-price">30500 Р.</span>
+                        <span class="new-price">25500 Р.</span>
+                     </div>
+                  </div>
                </li>
                <li class="catalog-item">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 2000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="new-price">12500 Р.</span>
-                  </p>
-               </li>
+                        <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 2000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="new-price">12500 Р.</span>
+                     </div>
+                  </div>
+               </li>      
                <li class="catalog-item catalog-item-new">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 3000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="old-price">22500 Р.</span>
-                     <span class="new-price">15500 Р.</span>
-                  </p>
+                        <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 3000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="old-price">22500 Р.</span>
+                        <span class="new-price">15500 Р.</span>
+                     </div>
+                  </div>
                </li>
                <li class="catalog-item">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 6000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="old-price">30500 Р.</span>
-                     <span class="new-price">25500 Р.</span>
-                  </p>
+                        <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 6000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="old-price">30500 Р.</span>
+                        <span class="new-price">25500 Р.</span>
+                     </div>
+                  </div>
                </li>
                <li class="catalog-item">
-                  <a href="catalog-item.html">
-                     <h3>Перфоратор BOSCH BFG 2000</h3>
-                  </a>
-                  <div class="catalog-item-buttons">
-                     <button class="catalog-item-order">Купить</button>
-                     <button class="catalog-item-bookmark">В закладки</button>
-                  </div>
-                  <p class="catalog-item-image">
+                  <div class="catalog-image-container">
                      <a href="catalog-item.html">
-                     <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-                  </p>
-                  <p class="catalog-item-price">
-                     <span class="new-price">12500 Р.</span>
-                  </p>
-               </li>
+                        <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+                     </a>
+                     <div class="catalog-item-buttons">
+                        <button class="catalog-item-order">Купить</button>
+                        <button class="catalog-item-bookmark">В закладки</button>
+                     </div>
+                  </div>
+                  <div class="catalog-content-container">
+                     <a href="catalog-item.html">
+                        <h3>Перфоратор BOSCH BFG 2000</h3>
+                     </a>
+                     <div class="catalog-item-price">
+                        <span class="new-price">12500 Р.</span>
+                     </div>
+                  </div>
+               </li>   
             </ul>
          </section>
          <!-- Здесь будут блоки, выделенные красным -->
