--- a/index.html
+++ b/index.html
@@ -13,70 +13,78 @@
 <body>
   <header class="header-main">
     <div class="header-top">
-      <p class="header-logo">
-        <img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18">
-            </p>
-        <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
-          <label for="search-field" class="visually-hidden">Поиск</label>
-          <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
-        </form>
-        <div class="header-quicklinks">
-          <a class="header-bookmarks" href="#">Закладки: 0</a>
-          <a class="header-cart" href="#">Корзина: 0</a>
-          <a class="header-order" href="#">Оформить заказ</a>
+      <div class="container">
+        <div class="header-logo">
+          <img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18">
         </div>
-    </div>
-    <p class="header-description">
-      Интернет-магазин<br>
-      строительных материалов<br>
-      и инструментов для ремонта
-    </p>
-    <div class="header-contacts">
-      <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-      <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-    </div>
-    <div class="user-navigation unauthorized">
-      <ul class="user-buttons">
-        <li><a href="#" class="user-button login-button">Войти</a></li>
-        <li><a href="#" class="user-button signup-button">Регистрация</a></li>
-      </ul>
-    </div>
-    <nav class="main-menu">
-      <ul>
-        <li>Главная</li>
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
+          <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
+            <label for="search-field" class="visually-hidden">Поиск</label>
+            <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
+          </form>
+          <div class="header-quicklinks">
+            <a class="header-bookmarks" href="#">Закладки: 0</a>
+            <a class="header-cart" href="#">Корзина: 0</a>
+            <a class="header-order" href="#">Оформить заказ</a>
+          </div>
+        </div>
+      </div>
+      <div class="header-bottom container">
+        <div class="header-description">
+          Интернет-магазин<br>
+          строительных материалов<br>
+          и инструментов для ремонта
+        </div>
+        <div class="header-contacts">
+          <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
+        <div class="user-navigation unauthorized">
+          <ul class="user-buttons">
+            <li><a href="#" class="user-button login-button">Войти</a></li>
+            <li><a href="#" class="user-button signup-button">Регистрация</a></li>
+          </ul>
+        </div>
+      </div>
+      <nav class="main-menu">
+        <div class="container">
+          <ul>
+            <li>Главная</li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+      </nav>
   </header>
   <main class="container">
     <h1 class="visually-hidden">Интернет-магазин «Техномарт»</h1>
     <!-- Здесь будут блоки, выделенные красным -->
-    <section class="main-about">
-      <h2>Компания «Техномарт»</h2>
-      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-        Техномарт работает со многими транспортными компаниями:
-      </p>
-      <ul class="companies-list">
-        <li>Деловые линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
-      </ul>
-      <a href="#" class="button-more">Подробнее о компании</a>
-    </section>
-    <section class="main-contacts">
-      <h2>Контакты</h2>
-      <p>Вы можете забрать товар сами, <br>
-        заехав в наш офис:
-      </p>
-      <p class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></p>
-      <button class="button-contacts">Заблудились? Напишите нам!</button>
-    </section>
+    <div class="index-columns">
+      <section class="main-about">
+        <h2>Компания «Техномарт»</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:
+        </p>
+        <ul class="companies-list">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#" class="button-more">Подробнее о компании</a>
+      </section>
+      <section class="main-contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, <br>
+          заехав в наш офис:
+        </p>
+        <p class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></p>
+        <button class="button-contacts">Заблудились? Напишите нам!</button>
+      </section>
+    </div>
   </main>
   <footer class="footer-main">
     <p class="footer-logo">
