--- a/index.html
+++ b/index.html
@@ -87,12 +87,10 @@
     </div>
   </main>
   <footer class="footer-main">
-    <p class="footer-logo">
-      <img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23">
-         </p>
-      <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-        +7 (812) 555-05-55
-      </p>
+    <div class="footer-top container">
+      <div class="footer-logo">
+        <img src="img/logo-footer.svg" alt="Логотип «Техномарта»" width="138" height="23">
+      </div>
       <ul class="footer-menu-main">
         <li><a href="#">Компания</a></li>
         <li><a href="#">Новости</a></li>
@@ -100,31 +98,37 @@
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
+      <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+        +7 (812) 555-05-55
+      </p>
       <ul class="footer-menu-extra">
         <li><a href="#">Материалы</a></li>
         <li><a href="#">Техника</a></li>
         <li><a href="#">Инструмент</a></li>
         <li><a href="#">Спецпредложения</a></li>
       </ul>
+    </div>
       <div class="footer-bottom">
-        <p class="footer-copyright">
-          © 2010–2017 Компания «Техномарт»<br>
-          Все права защищены
-        </p>
-        <div class="footer-social">
-          <ul>
-            <li><a class="social-button" href="#">Вконтакте</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
-          </ul>
+        <div class="container">
+          <p class="footer-copyright">
+            © 2010–2017 Компания «Техномарт»<br>
+            Все права защищены
+          </p>
+          <div class="footer-social">
+            <ul>
+              <li><a class="social-button" href="#">Вконтакте</a></li>
+              <li><a class="social-button" href="#">Фейсбук</a></li>
+              <li><a class="social-button" href="#">Инстаграм</a></li>
+            </ul>
+          </div>
+          <p class="footer-feedback">Обратная связь:<br>
+            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+          <p class="footer-developer">
+            Разработано —<br>
+            <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+          </p>
         </div>
-        <p class="footer-feedback">Обратная связь:<br>
-          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-        <p class="footer-developer">
-          Разработано —<br>
-          <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
-        </p>
       </div>
   </footer>
   <section class="modal modal-map">
