Закончила сетку на главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -13,40 +13,44 @@
 <body>
   <header class="header-main">
     <div class="header-top">
-      <p class="header-logo">
-        <a href="index.html">
-                  <img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18">
-               </a>
-      </p>
-      <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
-        <label for="search-field" class="visually-hidden">Поиск</label>
-        <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
-      </form>
-      <div class="header-quicklinks">
-        <a class="header-bookmarks" href="#">Закладки: 0</a>
-        <a class="header-cart active" href="#">Корзина: 10</a>
-        <a class="header-order" href="#">Оформить заказ</a>
+      <div class="container">
+        <div class="header-logo">
+          <a href="index.html">
+                     <img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18">
+                  </a>
+        </div>
+        <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
+          <label for="search-field" class="visually-hidden">Поиск</label>
+          <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
+        </form>
+        <div class="header-quicklinks">
+          <a class="header-bookmarks" href="#">Закладки: 0</a>
+          <a class="header-cart active" href="#">Корзина: 10</a>
+          <a class="header-order" href="#">Оформить заказ</a>
+        </div>
       </div>
     </div>
-    <p class="header-description">Интернет-магазин<br>
-      строительных материалов<br>
-      и инструментов для ремонта
-    </p>
-    <div class="header-contacts">
-      <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-      <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+    <div class="header-bottom container">
+      <div class="header-description">Интернет-магазин<br>
+        строительных материалов<br>
+        и инструментов для ремонта
+      </div>
+      <div class="header-contacts">
+        <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </div>
+      <div class="user-navigation authorized">
+        <ul class="user-buttons">
+          <li><a href="user-profile.html" class="user-button name-button">Равшан Джамшутович</a></li>
+          <li><a class="user-button logout-button" href="#">Выйти</a></li>
+        </ul>
+        <ul class="personal-buttons">
+          <li><a href="#">Мои заказы</a></li>
+          <li><a href="#">Личный кабинет</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="user-navigation authorized">
-      <ul class="user-buttons">
-        <li><a href="user-profile.html" class="user-button name-button">Равшан Джамшутович</a></li>
-        <li><a class="user-button logout-button" href="#">Выйти</a></li>
-      </ul>
-      <ul class="personal-buttons">
-        <li><a href="#">Мои заказы</a></li>
-        <li><a href="#">Личный кабинет</a></li>
-      </ul>
-    </div>
-    <nav class="main-menu">
+    <nav class="main-menu container">
       <ul>
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Компания</a></li>
@@ -279,47 +283,53 @@
     <!-- Здесь будут блоки, выделенные красным -->
   </main>
   <footer class="footer-main">
-    <p class="footer-logo">
-      <a href="index.html">
-               <img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23">
-            </a>
-    </p>
-    <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-      +7 (812) 555-05-55
-    </p>
-    <ul class="footer-menu-main">
-      <li><a href="#">Компания</a></li>
-      <li><a href="#">Новости</a></li>
-      <li><a href="#">Каталог</a></li>
-      <li><a href="#">Доставка</a></li>
-      <li><a href="#">Контакты</a></li>
-    </ul>
-    <ul class="footer-menu-extra">
-      <li><a href="#">Материалы</a></li>
-      <li><a href="#">Техника</a></li>
-      <li><a href="#">Инструмент</a></li>
-      <li><a href="#">Спецпредложения</a></li>
-    </ul>
-    <div class="footer-bottom">
-      <p class="footer-copyright">
-        © 2010–2017 Компания «Техномарт»<br>
-        Все права защищены
-      </p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
+    <div class="footer-top container">
+      <div class="footer-logo">
+        <a href="index.html">
+                  <img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23">
+               </a>
       </div>
-      <p class="footer-feedback">
-        Обратная связь:<br>
-        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      <ul class="footer-menu-main">
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+        +7 (812) 555-05-55
       </p>
-      <p class="footer-developer">
-        Разработано —<br>
-        <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
-      </p>
+      <ul class="footer-menu-extra">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <p class="footer-copyright">
+          © 2010–2017 Компания «Техномарт»<br>
+          Все права защищены
+        </p>
+        <div class="footer-social">
+          <ul>
+            <li><a class="social-button" href="#">Вконтакте</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">Инстаграм</a></li>
+          </ul>
+        </div>
+        <div class="footer-dev-contacts">
+          <p class="footer-feedback">
+            Обратная связь:<br>
+            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+          <p class="footer-developer">
+            Разработано —<br>
+            <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+          </p>
+        </div>
+      </div>
     </div>
   </footer>
   <section class="modal modal-cart">
