--- a/index.html
+++ b/index.html
@@ -45,18 +45,16 @@
           </ul>
         </div>
       </div>
-      <nav class="main-menu">
-        <div class="container">
-          <ul>
-            <li>Главная</li>
-            <li><a href="#">Компания</a></li>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-        </div>
+      <nav class="main-menu container">
+        <ul>
+          <li>Главная</li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
       </nav>
   </header>
   <main class="container">
@@ -91,23 +89,23 @@
       <div class="footer-logo">
         <img src="img/logo-footer.svg" alt="Логотип «Техномарта»" width="138" height="23">
       </div>
-      <ul class="footer-menu-main">
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-      <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-        +7 (812) 555-05-55
-      </p>
-      <ul class="footer-menu-extra">
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-      </ul>
-    </div>
+        <ul class="footer-menu-main">
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          +7 (812) 555-05-55
+        </p>
+        <ul class="footer-menu-extra">
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
       <div class="footer-bottom">
         <div class="container">
           <p class="footer-copyright">
@@ -121,13 +119,15 @@
               <li><a class="social-button" href="#">Инстаграм</a></li>
             </ul>
           </div>
-          <p class="footer-feedback">Обратная связь:<br>
-            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          </p>
-          <p class="footer-developer">
-            Разработано —<br>
-            <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
-          </p>
+          <div class="footer-dev-contacts">
+            <p class="footer-feedback">Обратная связь:<br>
+              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p class="footer-developer">
+              Разработано —<br>
+              <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+            </p>
+          </div>
         </div>
       </div>
   </footer>
